--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">I Am Poor</string>
-    <string name="txt_view_i_am_poor">I am Poor</string>
+    <string name="txt_view_i_am">I am</string>
+    <string name="text_view_2_poor">poor</string>
 </resources>
